# LifeLogger

./: .gitignore  Dockerfile  LICENSE  docker-compose.yaml  pyproject.toml
lifelogger/: drf-spectacular_description.html  drf_spec_desc.md  drf_spectacular_description.md  drf_spectacular_stylesheet.css  manage.py  schema.yml
lifelogger/exercise/: models.py  serializers.py  views.py
lifelogger/habits/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
lifelogger/habits/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_name.py  0003_alter_habit_options_alter_userhabits_options_and_more.py  0004_alter_habit_name.py  0004_habithistorylog_subscribedhabit_delete_userhabits.py  0005_rename_updated_at_habithistorylog_created_on.py
lifelogger/habits/tests/: conftest.py  factories.py  providers.py  test_Habit.py  test_HabitSerializer.py  test_UserHabits.py  test_UserHabitsDetailAPIView.py  test_UserHabitsSerializer.py  test_models.py  test_serializers.py  test_views.py
lifelogger/habits/tests/test_models/: test_Habit.py  test_HabitHistoryLog.py  test_SubscribedHabit.py
lifelogger/habits/tests/test_serializers/: test_AddRemoveSubscribedHabitSerializer.py  test_HabitSerializer.py
lifelogger/lifelogger/: asgi.py  conftest.py  custom_APIView.py  exception_handler.py  settings.py  urls.py  wsgi.py
lifelogger/main/: admin.py  conftest.py  models.py  serializers.py  urls.py  views.py
lifelogger/main/migrations/: 0001_initial.py  0002_alter_extendeduser_options.py
lifelogger/main/tests/: factories.py  test_UserSerializer.py  test_serializers.py  test_views.py
lifelogger/simple_jwt/: __init__.py  apps.py  urls.py  views.py
lifelogger/user/: admin.py  models.py  serializers.py  urls.py  views.py
lifelogger/user/migrations/: 0001_initial.py
lifelogger/user/tests/: conftest.py  test_UserListAPIView.py  test_UserSerializer.py  test_models.py  test_serializer.py  test_views.py
lifelogger/vitals/: models.py  serializers.py  urls.py  views.py
nginx/: nginx.conf
