[tool.poetry]
name = "lifelogger"
version = "0.1.0"
description = ""
authors = [{name="Tagmeh"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "requests"
]


[project.urls]


[tool.mypy]
python_version = 3.8
disallow_untyped_defs = true
ignore_missing_imports = true
strict = true
exclude = ["tests"]


[tool.pytest.ini_options]


[tool.black]
line_length = 120
skip-string-normalization = true


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
